force-app/main/default/objects/Opportunity/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>IF(ISPICKVAL(StageName,&quot;Closed Won&quot;),&quot;Won Deal&quot;,&quot;In Progress&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>