force-app/main/default/objects/Opportunity/fields/Urgent_Deal__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgent Deal</label>
    <type>Checkbox</type>
</CustomField>