force-app/main/default/objects/Opportunity/validationRules/Opp_Stage_Negotiation.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Stage_Negotiation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Amount &lt; 10000,Amount&gt;100000, ISPICKVAL(StageName,&apos;Negotiation/Review&apos;))</errorConditionFormula>
    <errorMessage>Amount should not be less than 10000 and greater than 100000</errorMessage>
</ValidationRule>