force-app/main/default/objects/Opportunity/validationRules/Opp_Stage_should_be_closed_won.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Stage_should_be_closed_won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &apos;Closed - Won&apos;),
  Probability &gt; 90
)</errorConditionFormula>
    <errorMessage>For Closed won probability is more than 90</errorMessage>
</ValidationRule>