force-app/main/default/objects/Opportunity/validationRules/Opportunity_Closed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed_Date</fullName>
    <active>false</active>
    <description>If the Opportunity closed date is greater than 5 then we can not edit the opportunity.</description>
    <errorConditionFormula>(TODAY() - CloseDate) &gt;5 &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorMessage>You Can not Edit the Opportunity, it is older than 5 days</errorMessage>
</ValidationRule>