force-app/main/default/objects/Opportunity/validationRules/Opportunity_VR_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_VR_Rule</fullName>
    <active>true</active>
    <description>If Stage is &apos;Prospecting&apos; then Amount is greater than 50</description>
    <errorConditionFormula>ISPICKVAL(StageName,&apos;Prospecting&apos;) &amp;&amp;  Amount &lt; 500</errorConditionFormula>
    <errorMessage>If Opportunity stage is &apos;Prospecting&apos; then amount should be greater than 500</errorMessage>
</ValidationRule>