force-app/main/default/objects/Opportunity/validationRules/VR_Closed_Date_2.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Closed_Date_2</fullName>
    <active>true</active>
    <errorConditionFormula>CloseDate &lt; TODAY() &amp;&amp; TEXT (StageName) = &apos;Prospecting&apos;</errorConditionFormula>
    <errorMessage>You Can not Changed the Closed Date, Because it is in Past State</errorMessage>
</ValidationRule>